Commit De Bonjour

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>ATTENTION</h1>
     <p>Vous et X nombre de personne ce sont fait avoir par ce lien malvaillant</p>
     <p>Avez vous vue l'URL ?</p>
+    <p>Bonjour</p>
 
 </body>
 
